FIX (UI) : Fix logo size after removing white space on png.

--- a/src/styles/components/_searchAppointment.scss
+++ b/src/styles/components/_searchAppointment.scss
@@ -8,7 +8,7 @@
         };
 
         &._doctolib {
-            max-height: 8.5rem;
+            max-height: 6.5rem;
         }
 
         &._maiia {
